@@ -1,3 +1,8 @@
+2015-02-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCtree_dec.hpp:
+	  Fix bug in weight calculation that affected tree-decompoisitions with imbalanced nested branches.
+
 2015-02-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/mappings.i:
